# picard

./: .gitignore  .pylintrc  .travis.yml  LICENSE  Makefile  README.rst  TODO.rst  pyproject.toml  readthedocs.yml  setup.py
docs/: api.rst  aws.rst  batteries.rst  clang.rst  concepts.rst  conf.py  file.rst  index.rst
examples/hello/: Makefile  make.py
picard/: __init__.py  abc.py  afunctor.py  api.py  argparse.py  aws.py  clang.py  context.py  file.py  functor.py  pattern.py  rule.py  shell.py  state.py  target.py  typing.py
tests/: gitlab_runners.py  hello.py  test_afunctor.py  test_file.py  test_functor.py  test_picard.py  test_rule.py
