[tool.poetry]
name = "picard"
version = "0.1.0"
description = "Make it so."
authors = ["John Freeman <jfreeman08@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
typing_extensions = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.2"
mypy = "^0.650.0"
pydocstyle = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
